# Mini-Storage

./: .gitignore  CMakeLists.txt  MyUdp.h  README  README.md  build.sh  cli.cc  myserver.service  readme  ser.cc
bin_release/: download  download3  server  server3  upload  upload3
client/: CMakeLists.txt  big_file_genor.sh  build.sh  readme  small_file_genor.sh  upload_20_small_file.sh
client/etc/: config.h
client/include/: big_file.h  small_file.h  tcp.h
client/lib/: big_file_download.cc  big_file_upload.cc  hash.c  small_file_download.cc  small_file_upload.c  small_file_upload.cc  tcp.cpp
client/src/: download.c  download.cc  upload.c  upload.cc
client/src/download/: download.c
client/src/upload/: a.out  big_file_upload.c  small_file_upload.c  tmp.txt  upload.c
client/utils/: tcp_socket.hpp
etc/: config.hpp
server/: CMakeLists.txt  readme.md
server/include/: ThreadPool.h  file.h  helper.h  jobs.h  package.h  tcp.h  worker.h
server/mmap-demo/: func_.cpp  func_.h  makefile  mmap_test.cpp
server/src/: BlockQueue.h  Condition.h  Mutex.h  ThreadPool.h  a.out  base.cc  base.h  file.cpp  file.h  helper.cpp  helper.h  jobs.cpp  package.cpp  package.h  server.cc  server.cpp  task.cc  task.h  tcp.cpp  tcp.h  worker.cpp  worker.h
test/: small_file_genor.sh
utils/: tcp_socket.hpp
